--- a/src/main/resources/assets/geode/lang/en_us.json
+++ b/src/main/resources/assets/geode/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "block.geode.smooth_end_stone": "Smooth End Stone"
+  "block.geode.smooth_end_stone": "Smooth End Stone",
+  "block.geode.budding_nether_quartz": "Budding Nether Quartz",
+  "block.geode.quartz_crystal": "Nether Quartz Crystal"
 }
