Basalt Biome now has its own geode

--- a/src/main/resources/assets/geode/lang/en_us.json
+++ b/src/main/resources/assets/geode/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.geode.smooth_end_stone": "Smooth End Stone",
   "block.geode.budding_nether_quartz": "Budding Nether Quartz",
+  "block.geode.budding_basalt_quartz": "Budding Basalt Quartz",
   "block.geode.quartz_crystal": "Nether Quartz Crystal"
 }
